# rlox

./: .gitignore  Cargo.toml  LICENSE  README.md  run_tests_with_leaksan
benches/: fib_bench.rs
benches/files/: fib.lox
libs/test_generator/: Cargo.toml
libs/test_generator/src/: lib.rs
src/: chunk.rs  classes.rs  compile.rs  function.rs  intern_string.rs  lib.rs  main.rs  opcodes.rs  scanner.rs  tokens.rs  value.rs  vm.rs
tests/: crafting_interpreters_tests.rs  generate_CI_tests.py  system_tests.rs
tests/ci_test_utilities/: generate_ci_test_runner.py  mod.rs  parse_execute_validate.rs
tests/files/: bin_search_tree.lox  closure_capture_variable.lox  closure_test_opcloseupvalue.lox  fib.lox  loops.lox  method_reference.lox  opclosure_capture_off_heap_value.lox  super_method_call.lox  this.lox
tests/files/crafting_interpreters_test_files/limit/: do_reuse_constants.lox
tests/files/system_test_files/: fib.lox  logic.lox  make_counter.lox  op_invoke.lox  shadowing.lox  strings.lox  super_get_closure.lox
