[package]
name = "rlox"
version = "0.1.0"
edition = "2021"

[dependencies]
static_assertions = "1.1.0"
enum-map = "2.4.1"
weak-table = "0.3.2"

[dev-dependencies]
criterion = { version = "0.3.4", features = ["html_reports"] }
pprof = { version = "0.10.0", features = ["flamegraph", "criterion"] }
regex = "1.6.0"
lazy_static = "1.4.0"

[lib]
name = "rlox"
path = "src/lib.rs"

[[bin]]
name = "rlox"
path = "src/main.rs"

[[bench]]
name = "fib_bench"
harness = false

[profile.release]
lto = true
panic = "abort"

[profile.bench]
lto = true
debug = true