[package]
name = "rlox"
version = "0.1.0"
edition = "2021"

[dependencies]
static_assertions = "1.1.0"
enum-map = "2.7.3"
weak-table = "0.3.2"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
pprof = { version = "0.13.0", features = ["flamegraph", "criterion"] }
regex = "1.11.0"
lazy_static = "1.5.0"
test_generator = { path = "libs/test_generator" }

[features]
default = []
debug_print_chunks = []
debug_print_stack = []
debug_print_instructions = []
debug_print_all = ["debug_print_chunks", "debug_print_stack", "debug_print_instructions"]

[lib]
name = "rlox"
path = "src/lib.rs"

[[bin]]
name = "rlox"
path = "src/main.rs"

[[bench]]
name = "fib_bench"
harness = false

[profile.release]
lto = true
panic = "abort"

[profile.bench]
lto = true
debug = true
